--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/vite": "^4.1.4",
+    "framer-motion": "^12.23.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
